hard-gists/11378945/run.log
=== Docker Run Log for 11378945 ===
Started at: Mi 29. Okt 11:56:03 CET 2025

[2025-10-29 11:56:03] START: Running container for 11378945
[2025-10-29 11:56:03] SUCCESS: Container 529df1bd4aa9bfbe778f53e2b3f0b25a3b9fd1c1abab1f1b21abd164c09aa03a started for 11378945
=== Container logs for 11378945 ===
  File "/snippet.py", line 7
    print row[0], row[1], row[3]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 11378945 ===
[2025-10-29 11:56:06] INFO: Container 529df1bd4aa9bfbe778f53e2b3f0b25a3b9fd1c1abab1f1b21abd164c09aa03a has stopped
